2005-02-06  Patrice Dumas  <dumas@centre-cired.fr>

	* manage_i18n.pl: remove and replace with...
	* manage_i18n.pl.in: ... added
	* configure.ac, manage_i18n.pl.in: detect whether it is possible to 
	do the translations buildup (--enable-translations).
	* doc/Makefile.am: rebuild texi2html as a dependency for the manual.
	(trick from Derek).
	* doc/texi2html.texi: sync.
	* Makefile.am,manage_i18n.pl.in: add command line arguments to
	manage_i18n.pl.in such that it is possible to build from outside of 
	the source dir.
	* Makefile.am: have texi2html depend on $(texi2html_SOURCES) otherwise
	the texi2html isn't rebuild when out of date.

2005-02-05  Derek Price  <derek@ximbiot.com>

	* NEWS: Note use of Automake 1.9.3.

2005-02-05  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Remove texi2html.1 and add texi2html_configure.pl.
	* Makefile.am: Some reformatting.
	(EXTRA_DIST): Add texi2html.spec.in.
	(texi2html): Make target executable.
	(texi2html.spec): New target.
	(man_MANS): Move to...
	* doc/Makefile.am (man_MANS): ...here.
	* configure.ac: Don't generate texi2html.1 or texi2html.spec.  Remove
	old comments.
	* texi2html.1.in: Move to...
	* doc/texi2html.1.in: ...here.
	* doc/.cvsignore: Add texi2html.1.

2005-02-05  Patrice Dumas  <dumas@centre-cired.fr>

	* Makefile.am,configure.ac: don't rely on configure to build the
	texi2html script, paste the different perl source files in make,
	with a sed one liner.

2005-02-04  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Remove translations.pl.
	* translations.pl: New file.

2005-02-04  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Add *.zip & translations.pl.
	* Makefile.am: Make sure translations.pl is built in srcdir.

2005-02-04  Derek Price  <derek@ximbiot.com>

	* configure.ac: Make .zip archives as part of `make dist'.
	* doc/Makefile.am (texi2html.html): Depend on files in srcdir, not
	builddir.

2005-02-03  Derek Price  <derek@ximbiot.com>

	* configure.ac: Update to dev version 1.77.